--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -23,7 +23,7 @@
             "
             media="(max-width:767px)" />
           <img
-            src="./images/galary&customers/icecream1-m.jpg "
+            src="./images/pexels-cacijane-kendall-9778218 (1).jpg"
             alt="ice-cream"
             class="galary-icecream__img"
         /></picture>
@@ -49,7 +49,7 @@
             "
             media="(max-width:767px)" />
           <img
-            src="./images/galary&customers/icecream1-m.jpg "
+            src="./images/pexels-cacijane-kendall-9778218 (1).jpg "
             alt="ice-cream"
             class="galary-icecream__img"
         /></picture>
@@ -75,7 +75,7 @@
             "
             media="(max-width:767px)" />
           <img
-            src="./images/galary&customers/icecream1-m.jpg "
+            src="./images/pexels-cacijane-kendall-9778218 (1).jpg "
             alt="ice-cream"
             class="galary-icecream__img"
         /></picture>
@@ -101,7 +101,7 @@
             "
             media="(max-width:767px)" />
           <img
-            src="./images/galary&customers/icecream1-m.jpg "
+            src="./images/pexels-cacijane-kendall-9778218 (1).jpg"
             alt="ice-cream"
             class="galary-icecream__img"
         /></picture>
