--- a/src/sass/layout/_slickgalary.scss
+++ b/src/sass/layout/_slickgalary.scss
@@ -1,5 +1,6 @@
 @import "../../../node_modules/slick-carousel/slick/slick.scss";
 
+@media screen and (min-width:200px){
 .slick-list {
     overflow: hidden;
     padding-bottom: 80px;
@@ -20,7 +21,7 @@
 
 .galary-icecream__list .slick-arrow {
     position: absolute;
-    top:75%;
+    top:80%;
     z-index: 10;
     font-size: 0;
     width: 60px;
@@ -67,5 +68,35 @@
                     transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
                 }
 }
+}
+@media screen and (min-width:768px) {
+    .galary-icecream__list .slick-arrow {
+        top: 60%;
+    }
+        .galary-icecream__list .slick-list{
+            top: -164px;
 
+        }
+ .galary-icecream__list .slick-prev.slick-arrow {
+     left: 20%;
+ }
+
+ .galary-icecream__list .slick-next.slick-arrow {
+     right: 20%;
+ }
+        }
+@media screen and (min-width:1200px) {
+.galary-icecream__list .slick-prev.slick-arrow {
+left: 20%;
+}   
+.galary-icecream__list .slick-next.slick-arrow {
+right: 20%;
+}
+.galary-icecream__list .slick-list {
+   top: -94px;
+   }
+.galary-icecream__list .slick-arrow {
+              top: 70%;
+}
+ }
 
