--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -49,14 +49,14 @@
         line-height: 1.22;
         text-align: center;
         text-transform: uppercase;
-        color: var(--text-color);
+        color: var(--title-text-color-secondary);
     }
     .advantages-list__text {
         font-weight: 400;
         font-size: 14px;
         line-height: 174%;
         text-align: center;
-        color: var(--text-color);
+        color: var(--title-text-color-secondary);
     }
 }
 
