--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -27,7 +27,7 @@
         <li class="advantages-list__item">
             <div>
             <svg class="advantages-list__icon" >
-                <use href="./images/sprite.svg#icon-ice-cream"></use>
+                <use href="./images/sprite.svg#icon-ice-crema"></use>
             </svg>
         </div>
         <div>
