--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -93,4 +93,13 @@
 .advantages-list__icon {
     width: 36px;
     height: 36px;
+    fill: var(--primary-text-color);
+}
+
+.advantages-list__icon::before {
+    content: "";
+    width: 50px;
+    height: 50px;
+    background-color: var(--button-color);
+    border-radius: 50%;
 }
