--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,7 +3,7 @@
         <h2 class="visually-hidden">Advantages</h2>
         <ul class="advantages-list list">
         <li class="advantages-list__item">
-            <div>
+            <div class="advantages-list__icons-wrapper">
             <svg class="advantages-list__icon">
                 <use href="./images/sprite.svg#icon-cow"></use>
             </svg>
@@ -14,7 +14,7 @@
         </div>
     </li>
         <li class="advantages-list__item">
-            <div>
+            <div class="advantages-list__icons-wrapper">
             <svg class="advantages-list__icon">
                 <use href="./images/sprite.svg#icon-weight"></use>
             </svg>
@@ -25,7 +25,7 @@
         </div>
     </li>
         <li class="advantages-list__item">
-            <div>
+            <div class="advantages-list__icons-wrapper">
             <svg class="advantages-list__icon" >
                 <use href="./images/sprite.svg#icon-ice-crema"></use>
             </svg>
