--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -96,10 +96,22 @@
     fill: var(--primary-text-color);
 }
 
-.advantages-list__icon::before {
-    content: "";
+.advantages-list__icons-wrapper {
+    display: flex;
+    justify-content: center;
+    // align-items: center;
+
     width: 50px;
     height: 50px;
     background-color: var(--button-color);
     border-radius: 50%;
 }
+
+
+// .advantages-list__icon::before {
+//     content: "";
+//     width: 50px;
+//     height: 50px;
+//     background-color: var(--button-color);
+//     border-radius: 50%;
+// }
