--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,74 +4,62 @@
         <h2 class="titel">products</h2>
         <ul class="product__list card-set list">
             <li class="product__item card-set__item green">
-                <picture>
-                    <source
-                        srcset="./images/product-1-desktop.jpg 1x, ./images/product-1-desktop@2x.jpg 2x, ./images/product-1-desktop@3x.jpg 3x"
-                        media="(min-width: 1200px)" />
-
-                    <source srcset="./images/product-1-tablet.jpg 1x, ./images/product-1-tablet@2x.jpg 2x"
-                        media="(min-width: 768px)" />
-
-                    <source srcset="./images/product-1-mobile.jpg 1x, ./images/product-1-mobile@2x.jpg 2x"
-                        media="(min-width: 320px)" />
-
-                    <img class="product__img" src="./images/product-1-mobile.jpg" alt="ice cream" />
-                </picture>
-
-                <picture>
-                    <source
-                        srcset="./images/products/ellipse-green_desc.jpg"
-                        media="(min-width: 1200px)" />
                 
-                    <source srcset="./images/products/ellipse-green_tab.jpg" 
-                    media="(min-width: 768px)" />
+                    <div>
+                        <picture>
+                            <source
+                                srcset="./images/product-1-desktop.jpg 1x, ./images/product-1-desktop@2x.jpg 2x, ./images/product-1-desktop@3x.jpg 3x"
+                                media="(min-width: 1200px)" />
+                        
+                            <source srcset="./images/product-1-tablet.jpg 1x, ./images/product-1-tablet@2x.jpg 2x" media="(min-width: 768px)" />
+                        
+                            <source srcset="./images/product-1-mobile.jpg 1x, ./images/product-1-mobile@2x.jpg 2x" media="(min-width: 320px)" />
+                        
+                            <img class="product__img" src="./images/product-1-mobile.jpg" alt="ice cream" />
+                        </picture>
+                        
+                        <div class="bcg-img ellipse-green"></div>
+                        
+                        <h3 class="product__titel">ice cream</h3>
+                        
+                        <p class="text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural
+                            stabilizer
+                        </p>
+                    </div>
+               
                 
-                    <source srcset="./images/products/ellipse-green_mob.jpg" 
-                    media="(min-width: 320px)" />
-                
-                    <img class="product__bcg-img" src="./images/products/ellipse-green_mob.jpg" alt="ellipse green" />
-                </picture>
-
-                <h3 class="product__titel">ice cream</h3>
-                <p class="text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural
-                    stabilizer
-                </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="40" height="20">
                         <use href="./images/sprite1.svg#arrow-icon"></use>
                     </svg>
                 </button>
+                
+                
             </li>
             <li class="product__item card-set__item yellow">
-                <picture>
-                    <source
-                        srcset="./images/product-2-desktop.jpg 1x, ./images/product-2-desktop@2x.jpg 2x, ./images/product-2-desktop@3x.jpg 3x"
-                        media="(min-width: 1200px)" />
+                <div>
+                    <picture>
+                        <source
+                            srcset="./images/product-2-desktop.jpg 1x, ./images/product-2-desktop@2x.jpg 2x, ./images/product-2-desktop@3x.jpg 3x"
+                            media="(min-width: 1200px)" />
+                    
+                        <source srcset="./images/product-2-tablet.jpg 1x, ./images/product-2-tablet@2x.jpg 2x" media="(min-width: 768px)" />
+                    
+                        <source srcset="./images/product-2-mobile.jpg 1x, ./images/product-2-mobile@2x.jpg 2x" media="(min-width: 320px)" />
+                    
+                        <img class="product__img" src="./images/product-2-mobile.jpg" alt="ice coffee" />
+                    </picture>
+                    
+                    <div class="bcg-img ellipse-yellow"></div>
+                    
+                    <h3 class="product__titel">ice coffee</h3>
+                    <p class="text">Fragrant invigorating drink created from 100% natural ingredients without the use of
+                        preservatives
+                        and flavor enhancers
+                    </p>
+                </div>
 
-                    <source srcset="./images/product-2-tablet.jpg 1x, ./images/product-2-tablet@2x.jpg 2x"
-                        media="(min-width: 768px)" />
-
-                    <source srcset="./images/product-2-mobile.jpg 1x, ./images/product-2-mobile@2x.jpg 2x"
-                        media="(min-width: 320px)" />
-
-                    <img class="product__img" src="./images/product-2-mobile.jpg" alt="ice coffee" />
-                </picture>
-
-                <picture>
-                    <source srcset="./images/products/ellipse-yellow_desc.jpg" media="(min-width: 1200px)" />
                 
-                    <source srcset="./images/products/ellipse-yellow_tab.jpg" media="(min-width: 768px)" />
-                
-                    <source srcset="./images/products/ellipse-yellow_mob.jpg" media="(min-width: 320px)" />
-                
-                    <img class="product__bcg-img" src="./images/products/ellipse-yellow_mob.jpg" alt="ellipse yellow" />
-                </picture>
-
-                <h3 class="product__titel">ice coffee</h3>
-                <p class="text">Fragrant invigorating drink created from 100% natural ingredients without the use of
-                    preservatives
-                    and flavor enhancers
-                </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="40" height="20">
                         <use href="./images/sprite1.svg#arrow-icon"></use>
@@ -79,34 +67,29 @@
                 </button>
             </li>
             <li class="product__item card-set__item red">
-                <picture>
-                    <source
-                        srcset="./images/product-3-desktop.jpg 1x, ./images/product-3-desktop@2x.jpg 2x, ./images/product-3-desktop@3x.jpg 3x"
-                        media="(min-width: 1200px)" />
+                <div>
+                    <picture>
+                        <source
+                            srcset="./images/product-3-desktop.jpg 1x, ./images/product-3-desktop@2x.jpg 2x, ./images/product-3-desktop@3x.jpg 3x"
+                            media="(min-width: 1200px)" />
+                    
+                        <source srcset="./images/product-3-mobile.jpg 1x, ./images/product-3-mobile@2x.jpg 2x" media="(min-width: 320px)" />
+                    
+                        <source srcset="./images/product-3-mobile.jpg 1x, ./images/product-3-mobile@2x.jpg 2x" media="(min-width: 320px)" />
+                    
+                        <img class="product__img" src="./images/product-3-mobile.jpg" alt="milkshakes" />
+                    </picture>
+                    
+                    <div class="bcg-img ellipse-red"></div>
+                    
+                    <h3 class="product__titel">milkshakes</h3>
+                    <p class="text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and
+                        other sweets
+                        of your choice
+                    </p>
+                </div>
 
-                    <source srcset="./images/product-3-mobile.jpg 1x, ./images/product-3-mobile@2x.jpg 2x"
-                        media="(min-width: 320px)" />
-
-                    <source srcset="./images/product-3-mobile.jpg 1x, ./images/product-3-mobile@2x.jpg 2x"
-                        media="(min-width: 320px)" />
-
-                    <img class="product__img" src="./images/product-3-mobile.jpg" alt="milkshakes" />
-                </picture>
-
-                <picture>
-                    <source srcset="./images/products/ellipse-red_desc.jpg" media="(min-width: 1200px)" />
                 
-                    <source srcset="./images/products/ellipse-red_tab.jpg" media="(min-width: 768px)" />
-                
-                    <source srcset="./images/products/ellipse-red_mob.jpg" media="(min-width: 320px)" />
-                
-                    <img class="product__bcg-img" src="./images/products/ellipse-red_mob.jpg" alt="ellipse red" />
-                </picture>
-                <h3 class="product__titel">milkshakes</h3>
-                <p class="text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and
-                    other sweets
-                    of your choice
-                </p>
                 <button class="button-info" type="button">
                     <svg class="info-icon" width="40" height="20">
                         <use href="./images/sprite1.svg#arrow-icon"></use>
