--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,23 +8,23 @@
         <ul class="footer-contact__list list">
             <li class="footer-contact__social link">
                 <a href="https://github.com/" class="footer-contact__link-social link">
-                    <!-- <svg class="social-link__icon " width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>  -->
+                    <svg class="social-link__icon " width="20" height="20">
+                    <use href="./images/social.svg#github"></use>
+                </svg> 
                 </a>
             </li>
                 <li class="footer-contact__social link">
                 <a href="https://web.telegram.org/k/" class="footer-contact__link-social link">
-                    <!-- <svg class="social-link__icon " width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>  -->
+                    <svg class="social-link__icon " width="20" height="20">
+                    <use href="./images/social.svg#telegram"></use>
+                </svg> 
                 </a>
             </li>
                 <li class="footer-contact__social link">
                 <a href="https://www.facebook.com/" class="footer-contact__link-social link">
-                    <!-- <svg class="social-link__icon " width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>  -->
+                    <svg class="social-link__icon " width="20" height="20">
+                    <use href="./images/social.svg#facebook"></use>
+                </svg> 
                 </a>
             </li>
         </ul>
