--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -40,14 +40,17 @@
             </li>
         </ul>
         <div class="contacts-button">
-            <button class="contacts-button__location button-color" type="button" data-modal-map-open>
-                Our Locations
+            <button class="contacts-button__location button-color" data-modal-map-open>
+                <span class="contacts-button__text">Our Locations</span>
+                    <svg class="contacts-button__icon" width="12" height="12">
+                    <use href="./images/sprite.svg#icon-Frame-32"></use>
+                    </svg>
             </button>
-            <button class="contacts-button__franchise button-transparent" type="button" data-modal-franchise-open>
-                Franchise
-                <!-- <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-                </svg> -->
+            <button class="contacts-button__franchise button-transparent" data-modal-franchise-open>
+                <span class="contacts-button__text">Franchise</span>
+                    <svg class="contacts-button__icon" width="12" height="12">
+                    <use href="./images/sprite.svg#icon-Frame-32"></use>
+                    </svg>
             </button>
         </div>
     </div>
