--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section id="about" class="container about">
+<section id="made" class="container about">
   <p class="about-label">Tradition and love</p>
   <h2 class="about-title">How it's made?</h2>
   <div class="about-wrapper">
