--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,40 +1,46 @@
-<section class="section-advantages">
-    <div class="container">
-        <h2 class="visually-hidden">Advantages</h2>
-        <ul class="advantages-list list">
-        <li class="advantages-list__item">
-            <div class="advantages-list__icons-wrapper">
-            <svg class="advantages-list__icon">
-                <use href="./images/sprite.svg#icon-cow"></use>
-            </svg>
+<section id="about" class="section-advantages">
+  <div class="container">
+    <h2 class="visually-hidden">Advantages</h2>
+    <ul class="advantages-list list">
+      <li class="advantages-list__item">
+        <div class="advantages-list__icons-wrapper">
+          <svg class="advantages-list__icon">
+            <use href="./images/sprite.svg#icon-cow"></use>
+          </svg>
         </div>
         <div>
-            <h3 class="advantages-list__title">721</h3>
-            <p class="advantages-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <h3 class="advantages-list__title">721</h3>
+          <p class="advantages-list__text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
         </div>
-    </li>
-        <li class="advantages-list__item">
-            <div class="advantages-list__icons-wrapper">
-            <svg class="advantages-list__icon">
-                <use href="./images/sprite.svg#icon-weight"></use>
-            </svg>
-        </div>
-        <div>
-            <h3 class="advantages-list__title">16kg</h3>
-            <p class="advantages-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        </div>
-    </li>
-        <li class="advantages-list__item">
-            <div class="advantages-list__icons-wrapper">
-            <svg class="advantages-list__icon" >
-                <use href="./images/sprite.svg#icon-ice-crema"></use>
-            </svg>
+      </li>
+      <li class="advantages-list__item">
+        <div class="advantages-list__icons-wrapper">
+          <svg class="advantages-list__icon">
+            <use href="./images/sprite.svg#icon-weight"></use>
+          </svg>
         </div>
         <div>
-            <h3 class="advantages-list__title">84</h3>
-            <p class="advantages-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <h3 class="advantages-list__title">16kg</h3>
+          <p class="advantages-list__text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
         </div>
-    </li>
+      </li>
+      <li class="advantages-list__item">
+        <div class="advantages-list__icons-wrapper">
+          <svg class="advantages-list__icon">
+            <use href="./images/sprite.svg#icon-ice-crema"></use>
+          </svg>
+        </div>
+        <div>
+          <h3 class="advantages-list__title">84</h3>
+          <p class="advantages-list__text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
+        </div>
+      </li>
     </ul>
-    </div>
+  </div>
 </section>
