--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -78,7 +78,7 @@
       </li>
     </ul>
 
-    <!-- <div class="hero-many-ice-cream">
+    <div class="hero-many-ice-cream">
       <picture>
         <source
           srcset="
@@ -102,7 +102,7 @@
           alt="Фотография мороженого"
         />
       </picture>
-    </div> -->
+    </div>
 
     <div class="hero-big-ice-cream">
       <picture>
