--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -8,7 +8,7 @@
             <use href="./images/sprite.svg#icon-cow"></use>
           </svg>
         </div>
-        <div>
+        <div class="advantages-list__text-wraper">
           <h3 class="advantages-list__title">721</h3>
           <p class="advantages-list__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
@@ -21,7 +21,7 @@
             <use href="./images/sprite.svg#icon-weight"></use>
           </svg>
         </div>
-        <div>
+        <div class="advantages-list__text-wraper">
           <h3 class="advantages-list__title">16kg</h3>
           <p class="advantages-list__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
@@ -34,7 +34,7 @@
             <use href="./images/sprite.svg#icon-ice-crema"></use>
           </svg>
         </div>
-        <div>
+        <div class="advantages-list__text-wraper">
           <h3 class="advantages-list__title">84</h3>
           <p class="advantages-list__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
