--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,22 +3,23 @@
   <h2 class="about-title">How it's made?</h2>
   <div class="about-wrapper">
     <div class="about-wrapper__thumb">
-      <div class="box"></div>
-      <picture>
-        <source
-          srcset="./images/cow-desktop.jpg 1x, ./images/cow-desktop@2x.jpg 2x"
-          media="(min-width:1200px)"
-        />
-        <source
-          srcset="./images/cow-tablet.jpg 1x, ./images/cow-tablet@2x.jpg 2x"
-          media="(min-width:768px)"
-        />
-        <source
-          srcset="./images/cow-mobile.jpg 1x, ./images/cow-mobile@2x.jpg 2x"
-          media="(min-width:320px)"
-        />
-        <img class="about-image" src="./images/cow-mobile.jpg" alt="a cow" />
-      </picture>
+      <div class="box">
+        <picture>
+          <source
+            srcset="./images/cow-desktop.jpg 1x, ./images/cow-desktop@2x.jpg 2x"
+            media="(min-width:1200px)"
+          />
+          <source
+            srcset="./images/cow-tablet.jpg 1x, ./images/cow-tablet@2x.jpg 2x"
+            media="(min-width:768px)"
+          />
+          <source
+            srcset="./images/cow-mobile.jpg 1x, ./images/cow-mobile@2x.jpg 2x"
+            media="(min-width:320px)"
+          />
+          <img class="about-image" src="./images/cow-mobile.jpg" alt="a cow" />
+        </picture>
+      </div>
     </div>
     <div class="about-wrapper__thumb">
       <p class="about-text">
