--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -33,8 +33,8 @@
   position: relative;
 }
 .box {
-  width: 280px;
-  height: 300px;
+  width: 278px;
+  height: 278px;
   border-radius: 50%;
   margin-bottom: 40px;
   margin-left: auto;
@@ -49,11 +49,12 @@
 }
 .about-image {
   position: absolute;
-  top: 23px;
-  left: 80px;
+  top: 50%;
+  left: 50%;
   border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
+  transform: translate(-50%, -45%);
 }
 .about-text {
   font-weight: 400;
@@ -108,7 +109,7 @@
     align-items: flex-end;
   }
   .about-image {
-    left: -1px;
+    transform: translate(-50%, -53%);
   }
   .about-text {
     text-align: start;
@@ -150,8 +151,7 @@
     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
   }
   .about-image {
-    top: 39px;
-    left: 5px;
+    transform: translate(-50%, -50%);
   }
   .about-text {
     font-size: 16px;
